segundo post y revisiones

--- a/blog/config.toml
+++ b/blog/config.toml
@@ -3,6 +3,14 @@ languageCode = 'es-es'
 title = 'Blog de DCCXXV'
 theme = 'not-much'
 showThemeNotice = true
+showPostsSummary = true
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+  [markup.highlight]
+    style = "catppuccin-macchiato"
 
 [params]
 theme = "dark"
