--- a/blog/config.toml
+++ b/blog/config.toml
@@ -10,7 +10,7 @@ showPostsSummary = true
     [markup.goldmark.renderer]
       unsafe = true
   [markup.highlight]
-    style = "catppuccin-macchiato"
+    style = "catppuccin-mocha"
 
 [params]
 theme = "dark"
