--- a/config.toml
+++ b/config.toml
@@ -23,3 +23,8 @@ name = "Github"
 title = "GitHub"
 url = "https://github.com/DCCXXV"
 weight = 3
+
+[markup]
+[markup.goldmark]
+[markup.goldmark.renderer]
+unsafe = true
